--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="refresh" content="0; URL=https://www.tokeytoke.tk/" />
+<html>
+<head>
+
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>★ 𝓜𝓲𝓴𝓮 𝓟𝓮𝓵𝓲𝓰𝓻𝓸𝓼𝓸</title>
+</head>
+<body vlink="#606060" text="#606060" link="#606060" bgcolor="#101010"
+alink="#606060">
+<h1 dir="auto">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<h1 dir="auto">★ 𝓜𝓲𝓴𝓮 𝓟𝓮𝓵𝓲𝓰𝓻𝓸𝓼𝓸</h1>
+</h1>
+This website is still under construction.<br>
+</body>
+</html>
